added to header and Main section1

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,146 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 
+/* *{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+
+} */
 
 .work-sans-font{
   font-family: "Work Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400px;
   font-style: normal;
+}
+
+.nav_bar{
+
+    justify-content: space-between;
+    align-items: center;
+}
+  
+
+
+
+.nav_links{
+    display: flex;
+} 
+
+
+.bg-light{
+    
+
+
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+
+.text-gray{
+    color: #424242;
+}
+
+.display-flex{
+
+        display: flex;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 20px;
+    
+}
+.nav-link{
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.nav_bar,.banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 3rem;
+
+}
+
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-title{
+    font-size: 64px;
+    font-weight: bold;
+}
+
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+
+
+
+
+}
+
+.banner-image{
+    width: 100%;
+
+}
+
+.teams{
+    align-items: center;
+    justify-content: center;
+}
+
+.team-image-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+.our-feature{
+    margin-left: 130px;
+    max-width: 530px;
+}
+.quick-list{
+    color: #727272;
+    font-size: 2.9rem; 
+}
+
+.of-our{
+    font-weight: 700;
+    font-size: 2.9rem;
+    color: #131313;
+}
+
+.feature-title{
+    color: #FF900E;
+    font-size: 2.9rem;
+}
+
+
+
+/* responsive media Query  */
+
+@media screen and (max-width:576px) {
+    .nav_bar,.nav_links{
+        flex-direction: column;
+    }
+
+    
 }
